--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,7 +4,7 @@
     <string name="action_settings">Settings</string>
 
     <string name="clear">C</string>
-    <string name="pozNeg">+/-</string>
+    <string name="pozNeg">±</string>
     <string name="percent">%</string>
     <string name="division">÷</string>
 
@@ -20,6 +20,20 @@
     <string name="zero">0</string>
     <string name="dot">.</string>
     <string name="equal">=</string>
+
+    <string name="power">xⁿ</string>
+    <string name="square">ⁿ√x</string>
+    <string name="bracketOpen">(</string>
+    <string name="bracketClose">)</string>
+    <string name="factorial">x!</string>
+    <string name="logarithmNat">㏑</string>
+    <string name="logarithm">log</string>
+    <string name="tan">tan</string>
+    <string name="cos">cos</string>
+    <string name="sin">sin</string>
+    <string name="one">1</string>
+    <string name="two">2</string>
+    <string name="three">3</string>
 
 
 </resources>
