--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -54,7 +54,7 @@
     <string name="ePow">eˣ</string>
     <string name="rand">Rand</string>
     <string name="rad">Rad</string>
-
+    <string name="plus">+</string>
 
 
 </resources>
