--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,13 +5,17 @@
 
     <string name="clear">C</string>
     <string name="pozNeg">±</string>
-    <string name="percent">%</string>
-    <string name="division">÷</string>
+    <string name="plus">+</string>
+    <string name="modulo">%</string>
+
+    <string name="division">/</string>
+    <string name="multiply">*</string>
+    <string name="divisionNice">÷</string>
+    <string name="multiplyNice">×</string>
 
     <string name="seven">7</string>
     <string name="eight">8</string>
     <string name="nine">9</string>
-    <string name="multiply">×</string>
 
     <string name="four">4</string>
     <string name="five">5</string>
@@ -54,7 +58,6 @@
     <string name="ePow">eˣ</string>
     <string name="rand">Rand</string>
     <string name="rad">Rad</string>
-    <string name="plus">+</string>
 
 
 </resources>
