÷ and × are now replaced internally to * and / for evaluation while on the screen look nice

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,10 +8,8 @@
     <string name="plus">+</string>
     <string name="modulo">%</string>
 
-    <string name="division">/</string>
-    <string name="multiply">*</string>
-    <string name="divisionNice">÷</string>
-    <string name="multiplyNice">×</string>
+    <string name="division">÷</string>
+    <string name="multiply">×</string>
 
     <string name="seven">7</string>
     <string name="eight">8</string>
