--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,43 +1,43 @@
 <resources>
     <string name="app_name">SuperCalc</string>
-    <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
 
     <string name="clear">C</string>
     <string name="pozNeg">±</string>
     <string name="plus">+</string>
+    <string name="minus">-</string>
     <string name="modulo">%</string>
 
     <string name="division">÷</string>
     <string name="multiply">×</string>
+    <string name="equal">=</string>
 
+    <string name="zero">0</string>
+    <string name="one">1</string>
+    <string name="two">2</string>
+    <string name="three">3</string>
+    <string name="four">4</string>
+    <string name="five">5</string>
+    <string name="six">6</string>
     <string name="seven">7</string>
     <string name="eight">8</string>
     <string name="nine">9</string>
 
-    <string name="four">4</string>
-    <string name="five">5</string>
-    <string name="six">6</string>
-    <string name="minus">-</string>
-    <string name="zero">0</string>
     <string name="dot">.</string>
-    <string name="equal">=</string>
 
-    <string name="power">xⁿ</string>
+    <string name="power">^</string>
     <string name="powerTwo">x²</string>
     <string name="powerThree">x³</string>
     <string name="twoNd">2ⁿᵈ</string>
     <string name="twoX">2ⁿ</string>
     <string name="tenX">10ˣ</string>
-    <string name="square">ⁿ√x</string>
+    <string name="square">√</string>
     <string name="bracketOpen">(</string>
     <string name="bracketClose">)</string>
-    <string name="factorial">x!</string>
+    <string name="factorial">!</string>
     <string name="logarithmNat">㏑</string>
-    <string name="logarithm">log₁₀</string>
-    <string name="one">1</string>
-    <string name="two">2</string>
-    <string name="three">3</string>
+    <string name="logarithm">log</string>
+
 
     <string name="tan">tan</string>
     <string name="cos">cos</string>
