fixed factorial and added infinity sign to numberFormatException

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -57,5 +57,7 @@
     <string name="rand">Rand</string>
     <string name="rad">Rad</string>
 
+    <string name="infinity">∞</string>
+
 
 </resources>
