fixed multiple operators(root,factorial) in textview

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -31,7 +31,7 @@
     <string name="twoNd">2ⁿᵈ</string>
     <string name="twoX">2ⁿ</string>
     <string name="tenX">10ˣ</string>
-    <string name="square">√</string>
+    <string name="root">√</string>
     <string name="bracketOpen">(</string>
     <string name="bracketClose">)</string>
     <string name="factorial">!</string>
