--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,6 +9,7 @@
     <string name="minus">-</string>
     <string name="modulo">%</string>
 
+
     <string name="division">÷</string>
     <string name="multiply">×</string>
     <string name="equal">=</string>
@@ -27,11 +28,6 @@
     <string name="dot">.</string>
 
     <string name="power">^</string>
-    <string name="powerTwo">x²</string>
-    <string name="powerThree">x³</string>
-    <string name="twoNd">2ⁿᵈ</string>
-    <string name="twoX">2ⁿ</string>
-    <string name="tenX">10ˣ</string>
     <string name="root">√</string>
     <string name="bracketOpen">(</string>
     <string name="bracketClose">)</string>
@@ -47,14 +43,13 @@
     <string name="cosh">cosh</string>
     <string name="sinh">sinh</string>
 
-    <string name="floor">⌊</string>
-    <string name="ceiling">⌉</string>
+    <string name="floor">⌊ ⌋</string>
+    <string name="ceiling">⌈ ⌉</string>
     <string name="abs">|x|</string>
 
 
     <string name="pi">π</string>
     <string name="e">e</string>
-    <string name="ePow">eˣ</string>
     <string name="rand">Rand</string>
     <string name="rad">Rad</string>
 
@@ -71,7 +66,7 @@
     <string name="num8">8</string>
     <string name="num9">9</string>
 
-<!-- TODO: Remove or change this placeholder text -->
+    <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
 
 
